--- a/css/style.css
+++ b/css/style.css
@@ -74,32 +74,32 @@ margin: 5px;
     height: 40px;
     margin: 10px;
   }
-  .hm-gradient {
-    background: linear-gradient(40deg, rgba(0,51,199,.3), rgba(209,149,249,.3));
-  }
+  /*.hm-gradient {
+    background: linear-gradient(40deg, rgba(255, 235, 59, 0.7) , rgba(255, 235, 59, 0.1));
+  }*/
   .heading {
     margin: 0 6rem;
     font-weight: 700;
-    color: #5d4267;
+    color: #558b2f;
   }
   .subheading {
     margin: 2.5rem 6rem;
-    color: #bcb2c0;
+    color: #6eb468;
   }
   .btn.btn-margin {
     margin-left: 6rem;
     margin-top: 3rem;
   }
-  .btn.btn-lily {
+  /*.btn.btn-lily {
     background: linear-gradient(40deg, rgba(0,51,199,.7), rgba(209,149,249,.7));
-  }
+  }*/
   .title {
     margin-top: 6rem;
     margin-bottom: 2rem;
-    color: #5d4267;
+    color: #079e28;
   }
   .subtitle {
-    color: #bcb2c0;
+    color: #0bb937;
     margin-left: 20%;
     margin-right: 20%;
     margin-bottom: 6rem;
